Fixed smooth-scroll on Safari :sparkles:

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@
 
 html,
 body {
+  --scroll-behavior: smooth;
   scroll-behavior: smooth;
   background-color: #121212;
   font-size: 14px;
